# red-mantis

./: .gitignore  README.md  pyproject.toml  travel.kml
.github/workflows/: build.yml  release.yml  test.yml
src/red_mantis/: __init__.py  file_generator.py  image_progessor.py  main.py
src/red_mantis/cli/: main.py
src/red_mantis/config/: settings.py
src/red_mantis/core/: extractors.py  kml.py  processor.py  transformer.py
src/red_mantis/matchers/: __init__.py  literals.py
src/red_mantis/models/: arguments.py  constants.py  gps.py  metadata.py  photo.py  run.py
src/red_mantis/utils/: logging_setup.py
tests/: test_extractors.py  test_processor.py  test_transformer.py
