[project]
name = "red_mantis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
red-mantis = "red_mantis.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
